<resources>
        <string name="app_name">INK</string>
        <string name="title_home">Home</string>
        <string name="title_Favorite">Favorite</string>
        <string name="title_Add">Add</string>
        <string name="menubar">menubar</string>
        <string name="AppLogo">app_logo</string>
        <string name="favorite">Favorite</string>
        <string name="do_you_want_to_delete_it">Do you want to delete it?</string>
        <string name="are_you_sure">Are you sure?</string>
        <string name="yes">YES</string>
        <string name="no">NO</string>
        <string name="add">Add</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="write_own_quotes">Write Own Quotes</string>
        <string name="submit">SUBMIT</string>
        <string name="textt">keep knoking one day someone will open the gate</string>
        <string name="myname">:- Vishal Mishra</string>
        <string name="bio">Made with ❤ by Vishal Mishra 😉</string>

</resources>